syntax = "proto3";

package stroeer.pages.section.v1;

import "stroeer/pages/section/v1/section_page.proto";

option go_package = "github.com/stroeer/tapir/go/stroeer/pages/section/v1;section";
option java_multiple_files = true;
option java_package = "de.stroeer.pages.section.v1";

service SectionPageService {
  rpc GetSectionPage (GetSectionPageRequest) returns (GetSectionPageResponse) {}
}

message GetSectionPageRequest {
  string section_path = 1;
}

message GetSectionPageResponse {
  stroeer.pages.section.v1.SectionPage section_page = 1;
}

